--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
     <link rel="manifest" href="./assets/scripts/site.webmanifest" />
 
     <link rel="stylesheet" href="./assets/styles/main.css" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-99BV9DQH77"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-99BV9DQH77");
+    </script>
   </head>
 
   <body>
@@ -57,8 +69,6 @@
       <div class="loader__tile"></div>
       <div class="loader__tile"></div>
     </div>
-
-    <audio id="bg-music" src="./assets/interstellar.mp3" loop autoplay></audio>
 
     <script src="./assets/scripts/main.js"></script>
   </body>
