--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
       <div class="loader__tile"></div>
     </div>
 
+    <script
+      data-name="BMC-Widget"
+      data-cfasync="false"
+      src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+      data-id="correaswebert"
+      data-description="Support me on Buy me a coffee!"
+      data-message="Hi there, thanks for contributing!"
+      data-color="#5F7FFF"
+      data-position="Right"
+      data-x_margin="18"
+      data-y_margin="18"
+    ></script>
     <script src="./assets/scripts/main.js"></script>
   </body>
 </html>
