Removed unnecessary files and added gzipped files

--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
 
       <main class="flex-row">
         <button onclick="reveal('blog')" class="icon-button">
-          <img src="./assets/img/blog.png" alt="Blog" />
+          <img src="./assets/img/blog.svg" alt="Blog" />
         </button>
         <button onclick="reveal('social')" class="icon-button">
-          <img src="./assets/img/social.png" alt="Social" />
+          <img src="./assets/img/social.svg" alt="Social" />
         </button>
         <button onclick="reveal('code')" class="icon-button">
-          <img src="./assets/img/code.png" alt="Code" />
+          <img src="./assets/img/code.svg" alt="Code" />
         </button>
       </main>
 
       <footer>
         <button onclick="reveal('credit')">
-          <img src="./assets/img/information.png" alt="credits" />
+          <img src="./assets/img/information.svg" alt="credits" />
         </button>
       </footer>
     </section>
@@ -76,7 +76,7 @@
       src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
       data-id="correaswebert"
       data-description="Support me on Buy me a coffee!"
-      data-message="Hi there, thanks for contributing!"
+      data-message=""
       data-color="#5F7FFF"
       data-position="Right"
       data-x_margin="18"
