updated close cross

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   <body>
     <div class="background"></div>
 
+    <button onclick="reveal('home')" id="close-button">&Cross;</button>
+
     <section class="flex-col" id="main-content">
       <header>
         <h1 class="name">Swebert <wbr /> Correa</h1>
