Add social media endpoints
Signed-off-by: Swebert Correa <correaswebert@gmail.com>

--- a/instagram.html
+++ b/instagram.html
@@ -4,13 +4,13 @@
     <title>GitHub | Swebert Correa</title>
     <meta
       http-equiv="refresh"
-      content="0;URL='https://github.com/correaswebert'"
+      content="0;URL='https://www.instagram.com/correaswebert'"
     />
   </head>
   <body>
     <p>
       Page is a redirect to my
-      <a href="https://github.com/correaswebert">Github</a>.
+      <a href="https://www.instagram.com/correaswebert">Instagram</a>.
     </p>
   </body>
 </html>
