--- a/linkedin.html
+++ b/linkedin.html
@@ -10,7 +10,7 @@
   <body>
     <p>
       Page is a redirect to my
-      <a href="https://github.com/correaswebert">Github</a>.
+      <a href="https://in.linkedin.com/in/correaswebert">Linkedin</a>.
     </p>
   </body>
 </html>
