--- a/medium.html
+++ b/medium.html
@@ -4,13 +4,13 @@
     <title>GitHub | Swebert Correa</title>
     <meta
       http-equiv="refresh"
-      content="0;URL='https://github.com/correaswebert'"
+      content="0;URL='https://correaswebert.medium.com'"
     />
   </head>
   <body>
     <p>
-      Page is a redirect to my
-      <a href="https://github.com/correaswebert">Github</a>.
+      Page is a redirect to
+      <a href="https://correaswebert.medium.com">Medium</a>.
     </p>
   </body>
 </html>
